--- a/styles/global.css
+++ b/styles/global.css
@@ -4,12 +4,17 @@
   box-sizing: border-box;
 }
 
-body {
-  width: 1100px;
-  margin: 0 auto;
-  font-family: Raleway, sans-serif;
+body { 
+  font-weight:0;
+  min-width: 1100px;
+  display:flex;
+  flex-direction: column;
+  min-height:100%;
+  margin: 0;
+  padding: 0;
+  font-family: Raleway, sans-serif; 
 }
-
+  
 h1,
 h2,
 h3,
